--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+	<title><%= title %></title>
+   <link rel='stylesheet' href='/stylesheets/style.css' />
+	<link rel='icon' href='/public/favicon.ico' type='image/x-icon' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Bienvenidos a <%= title %></h1>
+    <p>El portal donde podrá crear sus propios juegos!</p>
   </body>
 </html>
