--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,6 @@
   <body>
     <h1>Bienvenidos a <%= title %></h1>
     <p>El portal donde podrá crear sus propios juegos!</p>
+	<a href="/quizes/question">Comience a jugar!</a>
   </body>
 </html>
