--- a/views/quizes/question.ejs
+++ b/views/quizes/question.ejs
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8" /> <title>Quiz</title>
-	<link rel="stylesheet" href="/stylesheets/style.css" />
-</head>
-<body>
-	<h2>Quiz: el juego de las preguntas</h2>
-	Pregunta: <%= pregunta %>	
+	<p>Pregunta: <%= pregunta %></p>
 	<form method="get" action="/quizes/answer" >
 	<input type="text" name="respuesta" value="Responda aquí"/>
 	<input type="submit" value="Enviar..." />
 	</form>
-</body>	
-</html>
+
