--- a/views/quizes/question.ejs
+++ b/views/quizes/question.ejs
@@ -1,4 +1,4 @@
-	<p>Pregunta: <%= pregunta %></p>
+	</br><p>Pregunta: <%= pregunta %></p></br>
 	<form method="get" action="/quizes/answer" >
 	<input type="text" name="respuesta" value="Responda aquí"/>
 	<input type="submit" value="Enviar..." />
