--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,15 @@
 <head>
 	<meta charset="utf-8"/><title>Quiz</title>
 	<link rel="stylesheet" href="/stylesheets/style.css" type="text/css" />
+	<link rel="stylesheet"
+			type="text/css"
+			media="only screen and (min-width: 530px) and (min-device-width:481px)" 
+ 			href="/stylesheets/wide.css"  />
+	<link rel="stylesheet"
+			type="text/css"
+			media="only screen and (max-width: 480px)"
+ 			href="/stylesheets/smartphone.css"  />
+
 	<link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
 </head>
 <body>
@@ -19,6 +28,7 @@
 	</section>
 	<footer class="main" id="f1">
 		<p><a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a></p>
+		<p><a href="https://github.com/marlonvilla/p2pModulo6Quiz2015.git">Ver Proyecto GitHub</a></p>
 	</footer>
 </div>
 </body>
