--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,11 +17,11 @@
 <body>
 <div id="page-wrap">
 	<header class="main" id="h1" >
-		<h2>Quiz: el juego de las preguntas</h2>
+		<h2>Quiz<span>: el juego de las preguntas</span></h2>
 	</header>
 	<nav class="main" id="n1" role="navigation">
 		<span><a href="/">Inicio</a></span>
-		<span><a href="/quizes/question">Preguntas</a></span>
+		<span><a href="/quizes">Preguntas</a></span>
 		<span><a href="/author">Créditos</a></span>
 	</nav>
 	<section class="main" id="s1" >
@@ -29,7 +29,7 @@
 	</section>
 	<footer class="main" id="f1">
 		<p><a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a></p>
-		<p><a href="https://github.com/marlonvilla/p2pModulo6Quiz2015.git">Ver Proyecto GitHub</a></p>
+		<p><a href="https://github.com/marlonvilla/proyquiz2015">Ver Proyecto GitHub</a></p>
 	</footer>
 </div>
 </body>
