--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,5 +1,5 @@
-	</br><p>Pregunta: <%= pregunta %></p></br>
-	<form method="get" action="/quizes/answer" >
+	</br><p>Pregunta: <%= quiz.pregunta %></p></br>
+	<form method="get" action="/quizes/<%= quiz.id %>/answer" >
 	<input type="text" name="respuesta" value="Responda aquí"/>
 	<input type="submit" value="Enviar..." />
 	</form>
