--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -3,3 +3,7 @@
 	<tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
 <% } %>
 </table>
+<form method="get" action="/quizes">
+	Busqueda:<input type="tetx" name="search" value="Escriba aquí...">
+				<input type="submit" value="Enviar">
+</form>
