--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -4,6 +4,7 @@
 <% } %>
 </table>
 <form method="get" action="/quizes">
-	Busqueda:<input type="tetx" name="search" value="Escriba aquí...">
+	Buscar una pregunta:<input type="tetx" name="search" value="Escriba aquí...">
 				<input type="submit" value="Enviar">
-</form>
+</form></br></br>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
